--- a/UserManagementApi/UserManagementApi/appsettings.json
+++ b/UserManagementApi/UserManagementApi/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=users.db"
+    "DefaultConnection": "Data Source=usermanagement.db"
   }
 }
